@@ -1,7 +1,11 @@
 #       $Id: DumpTraceback.py,v 1.2 2008-01-19 10:34:48 dieter Exp $
 '''Dump the traceback of a long running request.'''
 
-import sys
+try:
+    from sys import _current_frames as current_frames
+except ImportError:
+    # Python 2.4 or lower: use threadframe
+    from threadframe import dict as current_frames
 
 from zExceptions.ExceptionFormatter import TextExceptionFormatter
 from zLOG import LOG, WARNING
@@ -51,7 +55,7 @@ def handler(req, handlerState, globalState):
       req.info,
       threadId,
       handlerState.monitorTime - req.startTime,
-      ''.join(formatStack(sys._current_frames()[threadId])),
+      ''.join(formatStack(current_frames()[threadId])),
       )
         )
     
